* eval_jump.c (rb_exec_end_proc): changed at_exit and END proc   evaluation order. [Bug #4400] [ruby-core:35237] * eval_jump.c (rb_mark_end_proc): ditto.

* test/ruby/test_beginendblock.rb (TestBeginEndBlock#test_nested_at_exit):
  added a test for nested at_exit.
* test/ruby/test_beginendblock.rb (TestBeginEndBlock#test_beginendblock):
  changed the test to adopt new spec.



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@30888 b2dd03c8-39d4-4d8f-98ff-823fe69b080e